# example_flask

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: app.py
